# pygame-examples

./: README.md  mrrectangle.py  pygame-widgets-example.py  pyproject.toml  requirements.txt  rocketlander.py  smoketest.py  sprite-example.py  sprite-shape-example.py  template.py  tw.py  tw_test.py
recipes/: NOTES.md  README.md  TODO.md  drawtext.py  everysecond.py  showimage.py  template.py
sprite/: README.md  circlesprite-example.py  circlesprite.py  clickandkill.py  colorsprite.py  imagesprite.py  noclassclickandkill.py  rectsprite.py
tw/: tw.py  tw_test.py
