[project]
name = "pygame-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "marcstober",email = "marcstober@gmail.com"},
]
requires-python = ">=3.13"
dependencies = [
    "pygame-ce>=2.5.7",
    "pygame-widgets>=1.3.2",
    "pysetwindowpos>=0.1.0"
]
license = {text = "UNLICENSED"}


[tool.pdm]
distribution = false
